[package]
name = "rogue-rs"
version = "0.1.0"
authors = ["Aaron Winter <winter.aaron93@gmail.com>"]
edition = "2018"

[dependencies]
"rand" = "0.8.2"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy.git"
rev = "a5d2501b75eccbe241a70ad8ccf09787e709fe1f"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1