[package]
name = "rogue-rs"
version = "0.1.0"
authors = ["Aaron Winter <winter.aaron93@gmail.com>"]
edition = "2018"

[dependencies]
"rand" = "0.8.2"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy.git"
rev = "c2a427f1a38db6b1d9798e631a7da7a8507fe18c"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1