[package]
name = "rogue-rs"
version = "0.1.0"
authors = ["Aaron Winter <winter.aaron93@gmail.com>"]
edition = "2018"

[dependencies]
"rand" = "0.8.2"

[dependencies.bevy]
path = "../../Rust/bevy"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1